Changed pom configuration release from 24 to 22.